cmake_minimum_required(VERSION 3.15)
project(al)

set(CMAKE_CXX_STANDARD 14)

add_executable(al main.cpp FileUploading.cpp FileUploading.h Playground.cpp Playground.h Creature.cpp Creature.h Plankton.cpp Plankton.h Predator.cpp Predator.h Herring.cpp Herring.h Cod.cpp Cod.h Shark.cpp Shark.h Whale.cpp Whale.h World.cpp World.h)